Odslona druga. Podoba mi sie HTML :*

--- a/index.html
+++ b/index.html
@@ -14,18 +14,25 @@
     <div class="left_Container">
       <div class="item_register">
         <p>Zarejestruj mnie..</p>
-        <button></button>
-        <button></button>
-        <div class="lineWrapper_1"></div>
-        <form></form>
-        <div class="lineWrapper_2"></div>
+        <button>rejestracja przez Instambuł</button>
+        <button>rejestracja przez Facebook</button>
+        <div class="lineWrapper pierwszy">
+          <div class="line"></div>
+          <p>Lub za pomocą maila</p>
+        </div>
+        <form>"formularz"</form>
+        <div class="lineWrapper drugi">
+          <div class="line"></div>
+        </div>
         <div>Masz już konto? <a href="login.html">zaloguj się</a></div>
       </div>
     </div>
     
     <div class="right_Container">
       <div class="background"></div>
-      <div class="logotyp"></div>
+      <div class="logotyp">
+        <img src="./images/png/paper.png"/>
+      </div>
     </div>
   </main>
 </body>
