--- a/index.html
+++ b/index.html
@@ -14,13 +14,48 @@
     <div class="left_Container">
       <div class="item_register">
         <p>Zarejestruj mnie..</p>
-        <button>rejestracja przez Instambuł</button>
-        <button>rejestracja przez Facebook</button>
+        <button><img src="./images/png/fb.png"/>rejestracja przez Facebook</button>
+        <button><img src="./images/png/insta.png"/>rejestracja przez Instambuł</button>
         <div class="lineWrapper pierwszy">
           <div class="line"></div>
           <p>Lub za pomocą maila</p>
         </div>
-        <form>"formularz"</form>
+        <form>
+
+          <div class="input">
+            <input name="firstName" type="text" placeholder="Joe"/>
+            <label class="label">First Name</label>
+            <div id="firstNameError" class="validationError">
+              First Name musi mieć od 2 do 20 liter, pierwsza litera musi być Wielka!
+            </div>
+          </div>
+
+          <div class="input">
+            <input name="lastName" type="text" placeholder="Doe"/>
+            <label class="label">Last Name</label>
+            <div id="lastNameError" class="validationError">
+              Last Name musi mieć od 2 do 20 liter, pierwsza litera musi być Wielka!
+            </div>
+          </div>
+
+          <div class="input">
+            <input name="email" type="text" placeholder="joe@doe.com"/>
+            <label class="label">e-mail</label>
+            <div id="emailError" class="validationError">
+              To chyba nie jest poprawny format e-mail!
+            </div>
+          </div>
+
+          <div class="input">
+            <input name="password" type="password" placeholder="**********"/>
+            <label class="label">Password</label>
+            <div id="passwordError" class="validationError">
+              Hasło musi mieć co najmniej 8 znaków, małą i Wielką literę,
+              cyfrę i znak specjalny!
+            </div>
+          </div>
+
+        </form>
         <div class="lineWrapper drugi">
           <div class="line"></div>
         </div>
