add media@(), index complit without validation and error class

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button><img src="./images/png/insta.png"/>Rejestracja przez Instambuł</button>
 
         <div class="lineWrapper pierwszy">
-          <div class="line"></div>
+          <div></div>
           <p>Lub za pomocą maila</p>
         </div>
 
@@ -78,7 +78,7 @@
         </form>
 
         <div class="lineWrapper drugi">
-          <div class="line"></div>
+          <div></div>
         </div>
 
         <div class="login-in">Masz już konto? <a href="login.html">zaloguj się</a></div>
