--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="global.css"/>
   <link rel="stylesheet" href="login.css"/>
   <link rel="icon" type="image/png" href="./images/png/favicon.ico" size="32x32"/>
-  <title>Pa_Per_Shop</title>
+  <title>logowanie - Pa_Per_Shop</title>
 </head>
 
 <body>
