--- a/odzyskiwanieHasla.html
+++ b/odzyskiwanieHasla.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/png" href="./images/png/favicon.ico" size="32x32"/>
-	<title>przypomnienie hasła - Pa_Per_Shop</title>
+	<title>odzyskiwanie hasła - Pa_Per_Shop</title>
 </head>
 <body>
 	
