--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <form id="form" class="form">
           <div class="nameBox">
             <div class="input">
-              <input name="firstName" type="text" placeholder="Joe"/>
+              <input id="firstName" name="firstName" type="text" placeholder="Joe"/>
               <label class="label">First Name</label>
               <div id="firstNameError" class="validationError">
                 First Name musi mieć od 2 do 20 liter, pierwsza litera musi być Wielka!
@@ -33,7 +33,7 @@
             </div>
 
             <div class="input">
-              <input name="lastName" type="text" placeholder="Doe"/>
+              <input id="lastName" name="lastName" type="text" placeholder="Doe"/>
               <label class="label">Last Name</label>
               <div id="lastNameError" class="validationError">
                 Last Name musi mieć od 2 do 20 liter, pierwsza litera musi być Wielka!
@@ -42,7 +42,7 @@
           </div>
 
           <div class="input">
-            <input name="email" type="text" placeholder="joe@doe.com"/>
+            <input id="email" name="email" type="text" placeholder="joe@doe.com"/>
             <label class="label">e-mail</label>
             <div id="emailError" class="validationError">
               To chyba nie jest poprawny format e-mail!
