--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <div class="lineWrapper drugi"></div>
 
-        <div class="login-in">Masz już konto? <a href="login.html">zaloguj się</a></div>
+        <div class="login-in">Masz już konto? <a href="logowanie.html">zaloguj się</a></div>
 
       </div>
     </div>
