--- a/logowanie.html
+++ b/logowanie.html
@@ -38,7 +38,7 @@
           <div class="submitBox">
             <div class="checkboxBox">
               <input id="zapamietajMnie" class="zapamietajMnie" type="checkbox" name="zapamietajMnie"/>
-              <label for="zapamietajMnie">Zapamiętaj mnie <a href="przypomnienie-hasla.html">Zapomniałem hasła</a></label>
+              <label for="zapamietajMnie">Zapamiętaj mnie <a href="odzyskiwanieHasla.html">Zapomniałem hasła</a></label>
             </div>
             <button id="submit" class="submit" type="submit">Zaloguj mnie</button>
           </div>
@@ -55,6 +55,7 @@
       <div class="logotyp"><img src="./images/png/paper.png"/></div>
     </div>
   </main>
+  <script src="logowanie.js"></script>
 </body>
 </html>
 
