--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="global.css"/>
-  <link rel="stylesheet" href="index.css"/>
+  <link rel="stylesheet" href="rejestracja.css"/>
   <link rel="icon" type="image/png" href="./images/png/favicon.ico" size="32x32"/>
   <title>rejestracja - Pa_Per_Shop</title>
 </head>
@@ -87,6 +87,7 @@
       </div>
     </div>
   </main> <!-- semanticonus znacznikus -->
+  <script src="rejestracja.js"></script>
 </body>
 </html>
 
