--- a/odzyskiwanieHasla.html
+++ b/odzyskiwanieHasla.html
@@ -4,9 +4,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/png" href="./images/png/favicon.ico" size="32x32"/>
+	<link rel="stylesheet" href="global.css"/>
+  	<link rel="stylesheet" href="odzyskiwanieHasla.css"/>
 	<title>odzyskiwanie hasła - Pa_Per_Shop</title>
 </head>
 <body>
-	
+	<main>
+		
+	</main>
+	<script src="odzyskiwanieHasla.js"></script>
 </body>
 </html>
