--- a/profile.html
+++ b/profile.html
@@ -3,10 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="global.css"/>
+  	<link rel="stylesheet" href="profile.css"/>
 	<link rel="icon" type="image/png" href="./images/png/favicon.ico" size="32x32"/>
 	<title>Twój profil - Pa_Per_Shop</title>
 </head>
 <body>
-	
+	<main>
+		
+	</main>
+	<script src="profile.js"></script>
 </body>
 </html>
