dodalem reszte html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <div class="submitBox">
             <div class="checkboxBox">
               <input id="terms" class="terms" type="checkbox" name="checboxTerms"/>
-              <label for="terms">I have read the <a href="###">Terms & Conditions</a></label>   <!-- to jest label dla tego checkBoxa <!-- w sensie z linkiem w środku --> -->
+              <label for="terms">I have read the <a href="###">Terms & Conditions</a></label>   <!-- to jest label dla tego checkBoxa <!-- w sensie z linkiem w środku --> 
             </div>
 
             <div id="termsError" class="validationError">
@@ -81,12 +81,12 @@
     </div>
     
     <div class="right_Container">
-      <div class="background"></div>  <!-- tło wstawiliśmy w css'ach -->
+      <div class="background"></div> 
       <div class="logotyp">
-        <img src="./images/png/paper.png"/>     <!-- a logotyp tutaj -->
+        <img src="./images/webp/paper.webp"/>     
       </div>
     </div>
-  </main> <!-- semanticonus znacznikus -->
+  </main> 
   <script src="rejestracja.js"></script>
 </body>
 </html>
