--- a/logowanie.html
+++ b/logowanie.html
@@ -9,6 +9,7 @@
   <title>logowanie - Pa_Per_Shop</title>
 </head>
 
+
 <body>
   <main>
     <div class="left_Container">
@@ -52,7 +53,7 @@
     
     <div class="right_Container">
       <div class="background"></div>
-      <div class="logotyp"><img src="./images/png/paper.png"/></div>
+      <div class="logotyp"><img src="./images/webp/paper.webp"/></div>
     </div>
   </main>
   <script src="logowanie.js"></script>
