--- a/profile.html
+++ b/profile.html
@@ -8,9 +8,29 @@
 	<link rel="icon" type="image/png" href="./images/png/favicon.ico" size="32x32"/>
 	<title>Twój profil - Pa_Per_Shop</title>
 </head>
+
 <body>
 	<main>
+		<div class="left_Container">
 		
+			<div class="item_profile">
+				<p class="title">Witaj użytkowniku!</p>
+				<div id="userContent">
+					<div class="lineWrapper pierwszy"><p>Zobacz innych</p></div>
+				</div>
+				<ul id="innerContent"></ul>
+				<div class="logout">
+					Dzięki za wizytę! <span class="logout">Wyloguj się</span>
+				</div>
+				</div>
+			</div>
+			</div>
+		
+		
+		<div class="right_Container">
+			<div class="background"></div>
+			<div class="logotyp"><img src="./images/webp/paper.webp"/></div>
+		</div>
 	</main>
 	<script src="profile.js"></script>
 </body>
