--- a/sprawdzSkrzynke.html
+++ b/sprawdzSkrzynke.html
@@ -9,6 +9,27 @@
 	<title>sprawdź skrzynkę - Pa_Per_Shop</title>
 </head>
 <body>
+	<main>
+	<div class="left_Container">
+		<div class="item_checkEmail">
+			<p class="title">Sprawdź swoją skrzynkę mailową</p>
+			<p class="subtitle">
+			  Twoja sesja wygasła. Spróbuj się zalogować lub zarejestrować ponownie. 
+			</p>
+			<a href="logowanie.html"><button class="submit">Przechodzę na stronę logowania</button></a>
+			<div class="lineWrapper"></div>
+			<div class="login-in">
+			  Wiadomość nie dotarła? <a class="link" href="#">Wyślij jeszcze raz</a>
+			</div>
+		  </div>
+	</div>
 	
+	<div class="right_Container">
+		<div class="background"></div> 
+		<div class="logotyp">
+		  <img src="./images/webp/paper.webp"/>     
+		</div>
+	</div>
+	</main>
 </body>
 </html>
