--- a/odzyskiwanieHasla.html
+++ b/odzyskiwanieHasla.html
@@ -16,7 +16,7 @@
 				<p class="title">Zapomniałeś hasła?</p>
 				<div class="lineWrapper drugi"></div>
           		<p class="subtitle">Podaj swój e-mail to wyślemy Ci link do zmiany hasła.</p>
-				<form>
+				<form id="form">
 					<div class="input">
 						<input id="email" name="email" type="text" placeholder="podaj e-mail i naciśnij enter"/>
 						<label class="label">e-mail</label>
