--- a/profile.html
+++ b/profile.html
@@ -17,11 +17,11 @@
 				<p class="title">Witaj użytkowniku!</p>
 				<div id="userContent">
 					<div class="lineWrapper pierwszy"><p>Zobacz innych</p></div>
-				</div>
-				<ul id="innerContent"></ul>
-				<div class="logout">
-					Dzięki za wizytę! <span class="logout">Wyloguj się</span>
-				</div>
+				
+					<ul id="innerContent"></ul>
+					<div id="qqqq" class="logout">
+						Dzięki za wizytę! <span class="logout">Wyloguj się</span>
+					</div>
 				</div>
 			</div>
 			</div>
