validation is OK

--- a/odzyskiwanieHasla.html
+++ b/odzyskiwanieHasla.html
@@ -18,7 +18,7 @@
           		<p class="subtitle">Podaj swój e-mail to wyślemy Ci link do zmiany hasła.</p>
 				<form id="form">
 					<div class="input">
-						<input id="email" name="email" type="text" placeholder="podaj e-mail i naciśnij enter"/>
+						<input id="email" name="email" type="text" placeholder="podaj e-mail ( i naciśnij enter)"/>
 						<label class="label">e-mail</label>
 						<div id="emailError" class="validationError">
 					  		To chyba nie jest poprawny format e-mail!
