--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
   <main>
     <div class="left_Container">
-      <div class="item_register">   <!-- to jest div środkująco wyrównujący -->
-
+      <div class="item_register">  
         <p>Zarejestruj mnie..</p>
 
         <button><img src="./images/png/fb.png"/>Rejestracja przez Facebook</button>
@@ -28,7 +27,7 @@
               <input id="firstName" name="firstName" type="text" placeholder="Joe"/>
               <label class="label">First Name</label>
               <div id="firstNameError" class="validationError">
-                First Name musi mieć od 2 do 20 liter, pierwsza litera musi być Wielka!
+                First Name musi mieć od 2 do 20 liter, pierwsza litera musi być Wielka! Bez polskich ogonków!
               </div>
             </div>
 
@@ -36,7 +35,7 @@
               <input id="lastName" name="lastName" type="text" placeholder="Doe"/>
               <label class="label">Last Name</label>
               <div id="lastNameError" class="validationError">
-                Last Name musi mieć od 2 do 20 liter, pierwsza litera musi być Wielka!
+                Last Name musi mieć od 2 do 20 liter, pierwsza litera musi być Wielka! Bez polskich ogonków!
               </div>
             </div>
           </div>
