--- a/sprawdzSkrzynke.html
+++ b/sprawdzSkrzynke.html
@@ -14,7 +14,7 @@
 		<div class="item_checkEmail">
 			<p class="title">Sprawdź swoją skrzynkę mailową</p>
 			<p class="subtitle">
-			  Twoja sesja wygasła. Spróbuj się zalogować lub zarejestrować ponownie. 
+			  założyłeś konto.Spróbuj się zalogować. 
 			</p>
 			<a href="logowanie.html"><button class="submit">Przechodzę na stronę logowania</button></a>
 			<div class="lineWrapper"></div>
@@ -31,5 +31,6 @@
 		</div>
 	</div>
 	</main>
+	<script src="sprawdzSkrzynke.js"></script>
 </body>
 </html>
