add sendEmail() przed rejestracja

--- a/sprawdzSkrzynke.html
+++ b/sprawdzSkrzynke.html
@@ -14,7 +14,7 @@
 		<div class="item_checkEmail">
 			<p class="title">Sprawdź swoją skrzynkę mailową</p>
 			<p class="subtitle">
-			  założyłeś konto.Spróbuj się zalogować. 
+			  Założyłeś konto.Spróbuj się zalogować. 
 			</p>
 			<a href="logowanie.html"><button class="submit">Przechodzę na stronę logowania</button></a>
 			<div class="lineWrapper"></div>
