regex with Polish symbols

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
       </div>
     </div>
   </main> 
-  <div id="popUp" class="popUp">
-    <div class="loader">..loading</div>
+  <div id="popUp" class="hidden">
+    <div class="loader"></div>
   </div>
   <script src="rejestracja.js"></script>
 </body>
