add setWinFn() setLosFn() in rejestracja.js

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
   <main>
     <div class="left_Container">
       <div class="item_register">  
-        <div id="win" class="grayStripe win">Twoja rejestracja powiodła się..</div>
-        <div id="los" class="grayStripe los">Nie udało nam się, Ciebie zarejestrować!</div>
+        <div id="win" class="grayStripe win">Rejestracja - OK! Teraz możesz się zalogować</div>
+        <div id="los" class="grayStripe los"></div>
         <p>Zarejestruj mnie..</p>
 
         <button><img src="./images/png/fb.png"/>Rejestracja przez Facebook</button>
 
         <button><img src="./images/png/insta.png"/>Rejestracja przez Instambuł</button>
 
-        <div class="lineWrapper pierwszy"><p>Lub za pomocą maila</p></div>
+        <div class="lineWrapper first"><p>Lub za pomocą maila</p></div>
 
         <form id="form" class="form">
           <div class="nameBox">
@@ -29,7 +29,7 @@
               <input id="firstName" name="firstName" type="text" placeholder="Joe"/>
               <label class="label">First Name</label>
               <div id="firstNameError" class="validationError">
-                First Name musi mieć od 2 do 20 liter, pierwsza litera musi być Wielka! Bez polskich ogonków!
+                First Name musi mieć od 2 do 20 liter, pierwsza litera musi być Wielka!
               </div>
             </div>
 
@@ -37,7 +37,7 @@
               <input id="lastName" name="lastName" type="text" placeholder="Doe"/>
               <label class="label">Last Name</label>
               <div id="lastNameError" class="validationError">
-                Last Name musi mieć od 2 do 20 liter, pierwsza litera musi być Wielka! Bez polskich ogonków!
+                Last Name musi mieć od 2 do 20 liter, pierwsza litera musi być Wielka!
               </div>
             </div>
           </div>
@@ -74,7 +74,7 @@
           </div>
         </form>
 
-        <div class="lineWrapper drugi"></div>
+        <div class="lineWrapper second"></div>
 
         <div class="login-in">Masz już konto? <a href="logowanie.html">zaloguj się</a></div>
 
