--- a/logowanie.html
+++ b/logowanie.html
@@ -21,7 +21,7 @@
 
         <button><img src="./images/png/insta.png"/>Logowanie przez Instambuł</button>
 
-        <div class="lineWrapper pierwszy"><p>Lub za pomocą maila</p></div>
+        <div class="lineWrapper first"><p>Lub za pomocą maila</p></div>
 
         <form id="form" class="form">
           <div class="input">
@@ -45,7 +45,7 @@
           </div>
         </form>
 
-        <div class="lineWrapper drugi"></div>
+        <div class="lineWrapper second"></div>
 
         <div class="login-in">Nie masz jeszcze konta? <a href="index.html">Zarejestruj mnie</a></div>
       </div>
